--- a/Frontend/recycle-bin.html
+++ b/Frontend/recycle-bin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Home - Contact Management System</title>
+    <title>Recycle Bin - Contact Management System</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -20,12 +20,8 @@
     </header>
 
     <div class="container">
-        <h1>Welcome to Contact Management System</h1>
-        <p>
-            This system allows you to manage contacts efficiently. You can add, edit, and delete contacts, 
-            as well as view and restore soft-deleted contacts from the recycle bin.
-        </p>
-        <p>Use the navigation bar to access different functionalities.</p>
+        <h1>Recycle Bin</h1>
+        <ul id="recycleBinList" class="contact-list"></ul>
     </div>
 
     <script src="js/app.js"></script>
