--- a/Frontend/contacts-list.html
+++ b/Frontend/contacts-list.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+        <!-- Navbar -->
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="add-contact.html">Add Contact</a></li>
+                    <li><a href="contacts-list.html">Contacts List</a></li>
+                    <li><a href="recycle-bin.html">Recycle Bin</a></li>
+                </ul>
+            </nav>
+        </header>
     <h1>Contact List</h1>
 
     <!-- Contact List -->
