--- a/Frontend/recycle-bin.html
+++ b/Frontend/recycle-bin.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recycle Bin</title>
     <link rel="stylesheet" href="css/styles.css">
-    <title>Recycle Bin - Contact Management System</title>
 </head>
 <body>
-    <!-- Navbar -->
     <header>
         <nav class="navbar">
             <ul>
@@ -18,12 +17,10 @@
             </ul>
         </nav>
     </header>
-
-    <div class="container">
-        <h1>Recycle Bin</h1>
-        <ul id="recycleBinList" class="contact-list"></ul>
-    </div>
-
+    <h1>Recycle Bin</h1>
+    <ul id="recycleBinList"></ul>
+    <button id="backButton">Back to Contacts</button>
+    
     <script src="js/app.js"></script>
 </body>
 </html>
