--- a/Frontend/add-contact.html
+++ b/Frontend/add-contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
     <title>Add Contact - Contact Management System</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -19,25 +19,49 @@
         </nav>
     </header>
 
-    <div class="container">
-        <h1>Add New Contact</h1>
-        <form id="contactForm" class="contact-form">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Enter name" required>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone</label>
-                <input type="text" id="phone" placeholder="Enter phone" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter email" required>
-            </div>
-            <button type="submit" class="btn">Add Contact</button>
-        </form>
-    </div>
+    <!-- Main Content -->
+    <main>
+        <div class="form-container">
+            <h1>Add New Contact</h1>
+            <form id="contactForm">
+                <input type="text" id="name" placeholder="Full Name" required><br>
+                <input type="text" id="phone" placeholder="Phone Number" required><br>
+                <input type="email" id="email" placeholder="Email Address" required><br>
+                <button type="submit" class="btn-submit">Add Contact</button>
+            </form>
+            <div id="message" class="message-box"></div>
+        </div>
+    </main>
 
-    <script src="js/app.js"></script>
+    <!-- Script for Form Submission -->
+    <script>
+        document.getElementById('contactForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const email = document.getElementById('email').value;
+
+            try {
+                const response = await fetch('http://localhost:5000/api/contacts', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ name, phone, email })
+                });
+
+                const result = await response.json();
+                if (response.ok) {
+                    document.getElementById('message').textContent = result.message;
+                    document.getElementById('message').classList.add('success');
+                } else {
+                    document.getElementById('message').textContent = result.message;
+                    document.getElementById('message').classList.add('error');
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('message').textContent = 'Failed to add contact.';
+                document.getElementById('message').classList.add('error');
+            }
+        });
+    </script>
 </body>
 </html>
