--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Contact Management System to efficiently manage, organize, and store all your important contacts.">
+    <meta name="keywords" content="Contact Management, Contacts, Add Contact, Recycle Bin, Contacts List, CMS">
     <link rel="stylesheet" href="css/styles.css">
     <title>Home - Contact Management System</title>
 </head>
@@ -19,14 +21,71 @@
         </nav>
     </header>
 
-    <div class="container">
-        <h1>Welcome to Contact Management System</h1>
-        <p>
-            This system allows you to manage contacts efficiently. You can add, edit, and delete contacts, 
-            as well as view and restore soft-deleted contacts from the recycle bin.
-        </p>
-        <p>Use the navigation bar to access different functionalities.</p>
-    </div>
+    <!-- Main Content -->
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1>Welcome to the Contact Management System</h1>
+                <p class="intro">
+                    Our system provides a comprehensive solution to manage, organize, and maintain all your important contacts.
+                    Whether you're storing business contacts or personal connections, our easy-to-use platform ensures
+                    efficiency and organization at every step.
+                </p>
+            </div>
+        </section>
+
+        <!-- Features Section -->
+        <section class="features">
+            <div class="container">
+                <h2>Key Features</h2>
+                <ul>
+                    <li><strong>Add New Contacts:</strong> Quickly add new contacts with essential details like name, email, phone number, and more.</li>
+                    <li><strong>View Contact List:</strong> Easily browse your contact list with detailed information displayed in a table format.</li>
+                    <li><strong>Edit/Delete Contacts:</strong> Make changes to your contact details or remove them as necessary.</li>
+                    <li><strong>Recycle Bin:</strong> Restore contacts that were previously soft-deleted from the recycle bin.</li>
+                    <li><strong>Search & Filter:</strong> Use the search function to filter through your contacts and find what you need instantly.</li>
+                    <li><strong>Mobile Friendly:</strong> Access your contacts on any device with our responsive design.</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- How It Works Section -->
+        <section class="how-it-works">
+            <div class="container">
+                <h2>How It Works</h2>
+                <div class="steps">
+                    <div class="step">
+                        <h3>Step 1: Add a Contact</h3>
+                        <p>Navigate to the 'Add Contact' page where you can enter and save essential contact details like name, phone number, and email address.</p>
+                    </div>
+                    <div class="step">
+                        <h3>Step 2: View and Edit Contacts</h3>
+                        <p>Visit the 'Contacts List' page to view all saved contacts. Click on a contact to edit or update their information as needed.</p>
+                    </div>
+                    <div class="step">
+                        <h3>Step 3: Manage the Recycle Bin</h3>
+                        <p>Deleted a contact by mistake? Go to the 'Recycle Bin' to restore contacts you've accidentally removed or permanently delete them.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Call-to-Action Section -->
+        <section class="cta">
+            <div class="container">
+                <h2>Ready to Manage Your Contacts?</h2>
+                <p>Get started today by adding your first contact, or explore your existing contact list.</p>
+                <a href="add-contact.html" class="btn">Add Contact Now</a>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Contact Management System. All Rights Reserved.</p>
+        </div>
+    </footer>
 
     <script src="js/app.js"></script>
 </body>
